--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,8 @@
-/.tx/
-/build/
-/bin/
-.editorcongif
-.gitattributes
+$ cat .gitignore
+bin/**
+build/**
+nbproject/**
+.idea/**
+.vscode/**
 modulebuilder.txt
+simplestats.code-workspace
